# grpc-rs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  cross_compile.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: 31167.supp  ci.yml
benches/: benches.rs  calltag.rs
benchmark/: Cargo.toml  README.md
benchmark/src/: bench.rs  client.rs  driver.rs  error.rs  histogram.rs  lib.rs  main.rs  scenario.rs  server.rs  util.rs  worker.rs
compiler/: Cargo.toml
compiler/src/: codegen.rs  lib.rs  prost_codegen.rs  util.rs
examples/: client.rs  gen.sh  log_util.rs  main.rs  route-guide.rs  route_guide.rs  route_guide_grpc.rs  server.rs  utils.rs
examples/hello_world/: client.rs  server.rs
examples/hello_world_instrument/: server.rs
examples/hello_world_metadata/: client.rs  server.rs
examples/helper/: mod.rs  route_guide_grpc.rs  utils.rs
examples/proto/: mod.rs
examples/route_guide/: client.rs  server.rs  util.rs
grpc-sys/: Cargo.toml  build.rs  grpc_wrap.c  grpc_wrap.cc  grpc_wrap_internals.cc  grpc_wrap_stats.cc  libuv.rs  link-deps.rs
grpc-sys/bindings/: aarch64-unknown-linux-gnu-bindings.rs  binding_internals.rs  bindings.rs  bindings_stats.rs  grpc-bindings.rs  x86_64-apple-darwin-bindings.rs  x86_64-unknown-linux-gnu-bindings.rs
grpc-sys/src/: grpc_wrap.rs  lib.rs
health/: Cargo.toml  README.md  build.rs
health/src/: lib.rs  proto.rs  service.rs
health/src/proto/: grpc.health.v1.rs  health.rs  health_grpc.rs  health_prost.rs
health/src/proto/prost/: grpc.health.v1.rs
health/src/proto/protobuf/: health.rs  health_grpc.rs
health/src/proto/protobuf_v3/: health.rs  mod.rs
health/tests/: health_check.rs
interop/: Cargo.toml
interop/src/: client.rs  lib.rs  main.rs  server.rs  util.rs
interop/src-protobufv3/: client.rs  lib.rs  server.rs
interop/src/proto/: mod.rs
interop/src/proto/testing/: mod.rs  test_grpc.rs
interop/tests/: tests.rs
proto/: Cargo.toml  build.rs  build.sh  example.desc  health.desc  testing.desc
proto/proto/grpc/testing/: control.proto  messages.proto  services.proto  stats.proto  test.proto
proto/src/: lib.rs  proto.rs  util.rs
proto/src/example/: helloworld.rs  helloworld_grpc.rs  mod.rs  route_guide.rs  route_guide_grpc.rs
proto/src/grpc/: mod.rs
proto/src/grpc/core/: stats.rs
proto/src/grpc/health/v1/: health.rs  health_grpc.rs  mod.rs
proto/src/grpc/testing/: control.rs  empty.rs  messages.rs  mod.rs  payloads.rs  services_grpc.rs  stats.rs  test_grpc.rs
proto/src/proto/prost/example/: helloworld.rs  routeguide.rs
proto/src/proto/prost/google/rpc/: google.rpc.rs
proto/src/proto/prost/testing/: grpc.testing.rs
proto/src/proto/protobuf/example/: helloworld.rs  helloworld_grpc.rs  route_guide.rs  route_guide_grpc.rs
proto/src/proto/protobuf/google/rpc/: status.rs
proto/src/proto/protobuf/testing/: control.rs  empty.rs  messages.rs  payloads.rs  services.rs  services_grpc.rs  stats.rs  test.rs  test_grpc.rs
proto/src/proto/protobuf_v3/example/: helloworld.rs  helloworld_grpc.rs  mod.rs  route_guide.rs  route_guide_grpc.rs
proto/src/proto/protobuf_v3/google/rpc/: mod.rs  status.rs
proto/src/proto/protobuf_v3/testing/: benchmark_service.rs  compiler_test.rs  control.rs  empty.rs  empty_service.rs  istio_echo.rs  messages.rs  metrics.rs  mod.rs  payloads.rs  proxy_service.rs  report_qps_scenario_service.rs  services.rs  services_grpc.rs  simple_messages.rs  stats.rs  test.rs  test_grpc.rs  worker_service.rs
proto/src/testing/: mod.rs
protobuf-build/: Cargo.toml  README.md
protobuf-build/src/: lib.rs  wrapper.rs
scripts/: format-grpc-sys  generate-bindings.sh  grpcwrap-clang-tidy.sh  lint-grpc-sys.pl  lint-grpc-sys.sh  reset-submodule  reset-submodule.cmd  update-bindings.sh
src/: auth_context.rs  buf.rs  call.rs  channel.rs  channelz.rs  client.rs  codec.rs  cq.rs  credentials.rs  env.rs  error.rs  health_grpc.rs  helloworld_grpc.rs  lib.rs  log_util.rs  metadata.rs  metrics.rs  promise.rs  quota.rs  route_guide_grpc.rs  server.rs  services_grpc.rs  stats.rs  test_grpc.rs  util.rs
src/async/: callback.rs  executor.rs  lock.rs  mod.rs  promise.rs
src/call/: buffers.rs  client.rs  mod.rs  server.rs
src/not_sync/: callback.rs  mod.rs
src/security/: auth_context.rs  credentials.rs  mod.rs
src/task/: callback.rs  executor.rs  lock.rs  mod.rs  promise.rs
src/util/: buf.rs  mod.rs
tests/: alarm.rs  health_check.rs  tests.rs
tests-and-examples/: Cargo.toml
tests-and-examples/certs/: ca.crt  client1.crt  client1.key  pd.crt  pd.key  peer_1.crt  root.crt  root.key  server.key  server1.crt  server1.key  server2.crt  server2.key
tests-and-examples/examples/: log_util.rs
tests-and-examples/examples/hello_world/: client.rs  server.rs
tests-and-examples/examples/load_balancing/: client.rs  server.rs
tests-and-examples/examples/route_guide/: client.rs  server.rs  util.rs
tests-and-examples/examples_protobufv3/hello_world/: client.rs
tests-and-examples/examples_protobufv3/route_guide/: client.rs  server.rs  util.rs
tests-and-examples/src/: lib.rs  util.rs
tests-and-examples/tests/: tests.rs
tests-and-examples/tests/cases/: auth_context.rs  cancel.rs  credential.rs  health_check.rs  kick.rs  metadata.rs  misc.rs  mod.rs  stream.rs
tests-and-examples/tests/cases_protobufv3/: cancel.rs  kick.rs  misc.rs  stream.rs
tests/cases/: alarm.rs  auth_context.rs  cancel.rs  credential.rs  health_check.rs  kick.rs  metadata.rs  misc.rs  mod.rs
tests/certs/: client1.crt  server1.key
xtask/: Cargo.toml
xtask/src/: main.rs
