[package]
name = "grpcio"
version = "0.13.0"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "protobuf", "rpc", "tls", "http2"]
repository = "https://github.com/tikv/grpc-rs"
readme = "README.md"
homepage = "https://github.com/tikv/grpc-rs"
documentation = "https://docs.rs/grpcio"
description = "The rust language implementation of gRPC, base on the gRPC c core library."
categories = ["asynchronous", "network-programming"]
autoexamples = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
grpcio-sys = { path = "grpc-sys", version = "0.13.0", default-features = false }
libc = "0.2"
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
protobuf = { version = "2.0", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }
prost = { version = "0.11", optional = true }
bytes = { version = "1.0", optional = true }
log = "0.4"
parking_lot = "0.12"

[workspace]
members = [
    "proto",
    "benchmark",
    "compiler",
    "health",
    "interop",
    "tests-and-examples",
]
# Don't include it in workspace to make it possible to use different version of
# rust-protobuf.
exclude = ["xtask"]

[features]
default = ["protobuf-codec", "boringssl"]
_secure = []
protobuf-codec = ["protobuf"]
protobufv3-codec = ["protobufv3"]
prost-codec = ["prost", "bytes"]
nightly = []
boringssl = ["grpcio-sys/boringssl", "_secure"]
openssl = ["_secure", "grpcio-sys/openssl"]
openssl-vendored = ["_secure", "grpcio-sys/openssl-vendored"]
no-omit-frame-pointer = ["grpcio-sys/no-omit-frame-pointer"]

[badges]
travis-ci = { repository = "tikv/grpc-rs" }

[patch.crates-io]
grpcio-compiler = { path = "compiler", version = "0.13.0" }
