[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "grpcio-proto/protobuf-codec"]
prost-codec = ["grpcio/prost-codec", "grpcio-proto/prost-codec"]

[dependencies]
grpcio = { path = ".." }
grpcio-proto = { path = "../proto", default-features = false }
futures = "0.1"
libc = "0.2"
grpcio-sys = { path = "../grpc-sys" }
rand = "0.3"
tokio-timer = "0.1"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "3.0"
slog-scope = "4.0"
slog-term = "2.2"
protobuf = "2.0"

[[bin]]
name = "run_driver"
path = "src/bin/run_driver.rs"

[[bin]]
name = "qps_worker"
path = "src/bin/qps_worker.rs"
