[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "grpcio-proto/protobuf-codec", "dep:protobuf"]
protobufv3-codec = ["grpcio/protobufv3-codec", "grpcio-proto/protobufv3-codec", "dep:protobufv3"]
prost-codec = ["grpcio/prost-codec", "grpcio-proto/prost-codec"]

[dependencies]
grpcio = { path = "..", default-features = false, features = ["boringssl"] }
grpcio-proto = { path = "../proto", default-features = false }
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
libc = "0.2"
grpcio-sys = { path = "../grpc-sys" }
rand = "0.7"
rand_distr = "0.2"
rand_xorshift = "0.2"
futures-timer = "3.0"
clap = "2.23"
log = "0.4"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "4.0"
slog-scope = "4.0"
slog-term = "2.2"
protobuf = { version = "2", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }

[[bin]]
name = "qps_worker"
path = "src/main.rs"
