[package]
name = "grpcio-compiler"
version = "0.5.0-alpha.2"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf"]
repository = "https://github.com/pingcap/grpc-rs"
homepage = "https://github.com/pingcap/grpc-rs"
documentation = "https://docs.rs/grpcio-compiler"
description = "gRPC compiler for grpcio"
categories = ["network-programming"]

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-codegen"]
prost-codec = ["prost-build", "prost-types", "prost"]

[dependencies]
protobuf = "2"
prost = { version = "0.5", optional = true }
prost-build = { version = "0.5", optional = true }
prost-types = { version = "0.5", optional = true }
protobuf-codegen = { version = "2", optional = true }
derive-new = "0.5"
tempfile = "3.0"

[[bin]]
name = "grpc_rust_plugin"
required-features = ["protobuf-codec"]
