[package]
name = "grpcio-compiler"
version = "0.5.0"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf"]
repository = "https://github.com/pingcap/grpc-rs"
homepage = "https://github.com/pingcap/grpc-rs"
documentation = "https://docs.rs/grpcio-compiler"
description = "gRPC compiler for grpcio"
categories = ["network-programming"]

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf"]
prost-codec = ["prost-build", "prost-types", "prost", "derive-new", "tempfile"]

[dependencies]
protobuf = { version = "2", optional = true }
prost = { version = "0.6", optional = true }
prost-build = { version = "0.6", optional = true }
prost-types = { version = "0.6", optional = true }
derive-new = { version = "0.5", optional = true }
tempfile = { version = "3.0", optional = true }

[[bin]]
name = "grpc_rust_plugin"
required-features = ["protobuf-codec"]
