[package]
name = "grpcio-sys"
version = "0.13.0+1.56.2-patched"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "bindings"]
repository = "https://github.com/tikv/grpc-rs"
homepage = "https://github.com/tikv/grpc-rs"
documentation = "https://docs.rs/grpcio-sys"
description = "FFI bindings to gRPC c core library"
categories = ["external-ffi-bindings", "network-programming"]
build = "build.rs"
edition = "2018"
exclude = [
    "grpc/doc/*",
    "grpc/etc/*",
    "grpc/examples/*",
    "grpc/Makefile",
    "grpc/templates/*",
    "grpc/src/android/*",
    "grpc/src/csharp/*",
    "grpc/src/node/*",
    "grpc/src/objective-c/*",
    "grpc/src/php/*",
    "grpc/src/python/*",
    "grpc/src/ruby/*",
    "grpc/test/core/end2end/*",
    "grpc/third_party/zlib/*",
    "grpc/third_party/abseil-cpp/absl/time/internal/cctz/testdata",
    "grpc/third_party/benchmark/*",
    "grpc/third_party/bloaty/*",
    "grpc/third_party/boringssl-with-bazel/*",
    "grpc/third_party/libuv/*",
    "grpc/third_party/gflags/*",
    "grpc/third_party/googletest/*",
    "grpc/third_party/objective_c/*",
    "grpc/third_party/protobuf/*",
    "grpc/third_party/toolchans/*",
    "grpc/third_party/envoy-api/*",
    "grpc/third_party/googleapis/*",
    "grpc/third_party/protoc-gen-validate/*",
    "grpc/third_party/udpa/*",
    "grpc/tools/run_tests/generated/*",
    "grpc/test/core/",
    "!grpc/test/core/security/*.cc",
    "!grpc/test/core/util/cmdline.cc",
    "grpc/test/cpp",
    "!grpc/test/core/**/*.proto",
    # fool cmake to not update submodules.
    "!grpc/third_party/envoy-api/README.md",
    "!grpc/third_party/googleapis/README.md",
]

[dependencies]
libc = "0.2"
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }
libz-sys = { version = "1.1.3", default-features = false, features = ["libc", "static"] }

[features]
# A hidden feature indicating that secure features should be enabled.
_secure = []
boringssl = ["boringssl-src", "_secure"]
openssl = ["_secure"]
openssl-vendored = ["openssl", "openssl-sys"]
no-omit-frame-pointer = []
# A hidden feature that is used to force regenerating bindings.
_gen-bindings = ["bindgen"]
_list-package = []

[target.'cfg(not(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86_64", target_arch = "aarch64"))))'.build-dependencies]
bindgen = "0.59.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
pkg-config = "0.3"
walkdir = "2.2.9"
# Because of rust-lang/cargo#5237, bindgen should not be upgraded util a minor or major release.
bindgen = { version = "0.59.0", default-features = false, optional = true, features = ["runtime"] }
boringssl-src = { version = "0.6.0", optional = true }
