[package]
name = "grpcio-health"
version = "0.8.0"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "healthcheck"]
repository = "https://github.com/tikv/grpc-rs"
homepage = "https://github.com/tikv/grpc-rs"
documentation = "https://docs.rs/grpcio-health"
description = "Health check wrappers for grpcio"
categories = ["network-programming"]
readme = "README.md"

[features]
default = ["protobuf-codec", "use-bindgen"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf", "protobuf-build/grpcio-protobuf-codec"]
prost-codec = ["grpcio/prost-codec", "prost", "protobuf-build/grpcio-prost-codec", "lazy_static"]
use-bindgen = ["grpcio/use-bindgen"]

[dependencies]
futures = "0.3"
grpcio = { path = "..", features = ["secure"], version = "0.8.0", default-features = false }
prost = { version = "0.7", optional = true }
protobuf = { version = "2", optional = true }
lazy_static = { version = "1.3", optional = true }
log = "0.4"

[build-dependencies]
protobuf-build = { version = "0.12", default-features = false }
