[package]
name = "grpcio-health"
version = "0.13.0"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "healthcheck"]
repository = "https://github.com/tikv/grpc-rs"
homepage = "https://github.com/tikv/grpc-rs"
documentation = "https://docs.rs/grpcio-health"
description = "Health check wrappers for grpcio"
categories = ["network-programming"]
readme = "README.md"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf"]
protobufv3-codec = ["grpcio/protobufv3-codec", "protobufv3"]
prost-codec = ["grpcio/prost-codec", "prost"]

[dependencies]
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
grpcio = { path = "..", version = "0.13.0", default-features = false }
prost = { version = "0.11", optional = true }
protobuf = { version = "2", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }
log = "0.4"
