[package]
name = "interop"
version = "0.1.0"
publish = false

[dependencies]
grpcio = { path = ".." }
grpcio-sys = { path = "../grpc-sys" }
grpcio-proto = { path = "../proto" }
protobuf = "~2.0"
futures = "0.1"
log = "0.3"
clap = "2.23"
futures-timer = "0.1"

[[bin]]
name = "interop_client"
path = "src/bin/client.rs"

[[bin]]
name = "interop_server"
path = "src/bin/server.rs"

