[package]
name = "interop"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
grpcio = { path = ".." }
grpcio-sys = { path = "../grpc-sys" }
grpcio-proto = { path = "../proto" }
protobuf = "2"
futures = "0.3"
log = "0.4"
clap = "2.23"
futures-timer = "3.0"

[[bin]]
name = "interop_client"
path = "src/bin/client.rs"

[[bin]]
name = "interop_server"
path = "src/bin/server.rs"

