[package]
name = "interop"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf", "grpcio/protobuf-codec", "grpcio-proto/protobuf-codec"]
protobufv3-codec = ["protobufv3", "grpcio/protobufv3-codec", "grpcio-proto/protobufv3-codec"]

[dependencies]
grpcio = { path = "..", default-features = false, features = ["boringssl"]}
grpcio-sys = { path = "../grpc-sys", default-features = false}
grpcio-proto = { path = "../proto", default-features = false}
protobuf = { version = "2", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
clap = "2.23"
futures-timer = "3.0"

[[bin]]
name = "interop_client"
path = "src/bin/client.rs"

[[bin]]
name = "interop_server"
path = "src/bin/server.rs"
