[package]
name = "grpcio-proto"
version = "0.9.0"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "proto"]
repository = "https://github.com/tikv/grpc-rs"
homepage = "https://github.com/tikv/grpc-rs"
documentation = "https://docs.rs/grpcio-sys"
description = "Public proto files for grpcio."
categories = ["network-programming"]
build = "build.rs"

[features]
default = ["protobuf-codec", "use-bindgen"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf-build/grpcio-protobuf-codec"]
prost-codec = ["prost-derive", "prost-types", "bytes", "lazy_static", "grpcio/prost-codec", "prost", "protobuf-build/grpcio-prost-codec"]
use-bindgen = ["grpcio/use-bindgen"]

[dependencies]
futures = "0.3"
grpcio = { path = "..", features = ["secure"], version = "0.9.0", default-features = false }
bytes = { version = "1.0", optional = true }
prost = { version = "0.7", optional = true }
prost-derive = { version = "0.7", optional = true }
prost-types = { version = "0.7", optional = true }
protobuf = "2"
lazy_static = { version = "1.3", optional = true }

[build-dependencies]
protobuf-build = { version = "0.12", default-features = false }
walkdir = "2.2"
