[package]
name = "grpcio-proto"
version = "0.13.0"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "proto"]
repository = "https://github.com/tikv/grpc-rs"
homepage = "https://github.com/tikv/grpc-rs"
documentation = "https://docs.rs/grpcio-sys"
description = "Public proto files for grpcio."
categories = ["network-programming"]

[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf"]
protobufv3-codec = ["grpcio/protobufv3-codec", "protobufv3"]
prost-codec = ["prost-build", "prost-derive", "prost-types", "bytes", "lazy_static", "grpcio/prost-codec", "prost"]

[dependencies]
grpcio = { path = "..", features = ["boringssl"], version = "0.13.0", default-features = false }
bytes = { version = "1.0", optional = true }
prost = { version = "0.11", optional = true }
prost-derive = { version = "0.11", optional = true }
prost-types = { version = "0.11", optional = true }
protobuf = { version = "2", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }
lazy_static = { version = "1.3", optional = true }

[build-dependencies]
prost-build = { version = "0.11", optional = true }
walkdir = "2.2"
