[package]
name = "tests-and-examples"
version = "0.1.0"
edition = "2018"
autoexamples = false
publish = false

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf", "grpcio/protobuf-codec", "grpcio-proto/protobuf-codec", "grpcio-health/protobuf-codec"]
protobufv3-codec = ["protobufv3", "grpcio/protobufv3-codec", "grpcio-proto/protobufv3-codec", "grpcio-health/protobufv3-codec"]
prost-codec = ["prost", "bytes", "grpcio/prost-codec", "grpcio-proto/prost-codec", "grpcio-health/prost-codec"]

[dependencies]
grpcio-sys = { path = "../grpc-sys" }
libc = "0.2"
futures-channel = { version = "0.3", features = ["sink"] }
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
futures-timer = "3.0"
protobuf = { version = "2", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }
prost = { version = "0.11", optional = true }
bytes = { version = "1.0", optional = true }
log = "0.4"
grpcio = { path = "..", default-features = false, features = ["boringssl"] }
grpcio-health = { path = "../health", default-features = false }

[dev-dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
grpcio-proto = { path = "../proto", default-features = false }
rand = "0.7"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "4.0"
slog-scope = "4.0"
slog-term = "2.2"

[[example]]
name = "route_guide_client"
path = "examples/route_guide/client.rs"
#required-features = "protobuf-codec" or "protobufv3-codec"

[[example]]
name = "route_guide_server"
path = "examples/route_guide/server.rs"
#required-features = "protobuf-codec" or "protobufv3-codec"

[[example]]
name = "greeter_client"
path = "examples/hello_world/client.rs"
#required-features = "protobuf-codec" or "protobufv3-codec"

[[example]]
name = "greeter_server"
path = "examples/hello_world/server.rs"
#required-features = "protobuf-codec" or "protobufv3-codec"

[[example]]
name = "lb_greeter_client"
path = "examples/load_balancing/client.rs"
#required-features = "protobuf-codec" or "protobufv3-codec"

[[example]]
name = "lb_greeter_server"
path = "examples/load_balancing/server.rs"
#required-features = "protobuf-codec" or "protobufv3-codec"
